fix: alignment of table items with color

--- a/src/ui/annotation_schema_tab.css
+++ b/src/ui/annotation_schema_tab.css
@@ -14,7 +14,6 @@
   padding: 4px 2px;
   border-bottom: 1px solid #222;
   gap: 0.5rem;
-  align-items: flex-start;
 }
 
 .neuroglancer-annotation-schema-text-container {
